--- a/index.html
+++ b/index.html
@@ -45,6 +45,29 @@
             </li>
             <li id="splitting-to-2columns">
               <a class="dropdown" href="#">అందరి కోసం</a>
+              <!-- <ul class="hidden">
+                <li><a class="hidden-links" href="login.html">ముఖచిత్ర కథ</a></li>
+                <li><a class="hidden-links" href="login.html">అంతర్నేత్రం</a></li>
+                <li><a class="hidden-links" href="login.html">వార్తల్లో వ్య్తక్తి</a></li>
+                <li><a class="hidden-links" href="login.html">హెల్త్ టిప్స్</a></li>
+                <li><a class="hidden-links" href="login.html">సెటైర్</a></li>
+                <li><a class="hidden-links" href="login.html">చూడాల్సిన ప్రదేశం</a></li>
+                <li><a class="hidden-links" href="login.html">రేపటి కోసం</a></li>
+                <li><a class="hidden-links" href="login.html">ముఖా ముఖి</a></li>
+                <li><a class="hidden-links" href="login.html">వినాల్సిన పాట</a></li>
+                <li><a class="hidden-links" href="login.html">చదవాల్సిన పుస్తకం</a></li>
+                <li><a class="hidden-links" href="login.html">చూడాల్సిన సినిమా</a></li>
+                <li><a class="hidden-links" href="login.html">సాహితీ శిఖరాలు</a></li>
+                <li><a class="hidden-links" href="login.html">జీవన చిత్రాలు</a></li>
+                <li><a class="hidden-links" href="login.html">ఈ నెల స్మరణీయులు</a></li>
+                <li><a class="hidden-links" href="login.html">పండుగ</a></li>
+                <li><a class="hidden-links" href="login.html">పుస్తక సమీక్ష</a></li>
+                <li><a class="hidden-links" href="login.html">సభలు-సత్కారాలు</a></li>
+                <li><a class="hidden-links" href="login.html">గ్రంధావిష్కరణ</a></li>
+                <li><a class="hidden-links" href="login.html">పుస్తక పరిచయం</a></li>
+                <li><a class="hidden-links" href="login.html">సాహితీ పద సుమతి</a></li>
+                <li><a class="hidden-links" href="login.html">చిత్ర కథ-చిత్రకవిత</a></li>
+              </ul> -->
               <ul class="hidden">
                 <li><a class="hidden-links" href="login.html">ముఖచిత్ర కథ</a></li>
                 <li><a class="hidden-links" href="login.html">అంతర్నేత్రం</a></li>
@@ -57,6 +80,8 @@
                 <li><a class="hidden-links" href="login.html">వినాల్సిన పాట</a></li>
                 <li><a class="hidden-links" href="login.html">చదవాల్సిన పుస్తకం</a></li>
                 <li><a class="hidden-links" href="login.html">చూడాల్సిన సినిమా</a></li>
+              </ul>
+              <ul class="hidden column2">
                 <li><a class="hidden-links" href="login.html">సాహితీ శిఖరాలు</a></li>
                 <li><a class="hidden-links" href="login.html">జీవన చిత్రాలు</a></li>
                 <li><a class="hidden-links" href="login.html">ఈ నెల స్మరణీయులు</a></li>
@@ -457,16 +482,16 @@
 
       <section class="sec section2">
         <div class="current-magazine">
-          <div class="head">Read the Current Magazine</div>
+          <div class="head">Read the Current Magazine For Free</div>
 
           <div class="image-card">
             <div class="current-image">
-              <a href="#">
-                <img src="images/June-2024.jpg" alt="current month image">
+              <a href="pdf/sumathi-july2024.pdf">
+                <img src="images/July-2024.png" alt="current month image">
               </a>
             </div>
-            <div class="month">JUNE 2024</div>
-            <div class="download"><a href="#">CLICK TO OPEN</a></div>
+            <div class="month">JULY 2024</div>
+            <div class="download"><a href="pdf/sumathi-july2024.pdf">CLICK TO OPEN</a></div>
           </div>
           </a>
         </div>
@@ -656,50 +681,64 @@
           <div class="head"><a href="https://www.youtube.com/@SumathiTVchannel">SUMATHI TV CHANNEL</a></div>
           <div class="videos-wrapper">
 
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/hVOwWqka_6A?si=bBQvbn3PImJ5pa8v"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/e1_Z-yDAJBc?si=tHos0Ajy3CLtFyg1"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/ExShJJOhieI?si=aTB73wge0SY4d1eP"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/hVOwWqka_6A?si=bBQvbn3PImJ5pa8v"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
 
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/aopZaKsxm1U?si=g_neX4bAq5e48bdf"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/e1_Z-yDAJBc?si=tHos0Ajy3CLtFyg1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
 
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/pO8g47ofgzM?si=Ff0EWCtee-83ROee"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/haTDzIGE1Ds?si=afcf6ELgIOWTBO2P"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/9S8Af4uE7-4?si=vs9TKF2E--JpJA9H"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/xDIp5uHGuTU?si=eX8JLWCLK8tbeeVV"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-            <iframe width="300" height="170" src="https://www.youtube.com/embed/SCcm1DzIzQQ?si=4Nln7iLdbjG5mcar"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/ExShJJOhieI?si=aTB73wge0SY4d1eP"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/aopZaKsxm1U?si=g_neX4bAq5e48bdf"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/pO8g47ofgzM?si=Ff0EWCtee-83ROee"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/haTDzIGE1Ds?si=afcf6ELgIOWTBO2P"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/9S8Af4uE7-4?si=vs9TKF2E--JpJA9H"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/xDIp5uHGuTU?si=eX8JLWCLK8tbeeVV"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="iframe-border">
+              <iframe width="300" height="170" src="https://www.youtube.com/embed/SCcm1DzIzQQ?si=4Nln7iLdbjG5mcar"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
           </div>
 
         </div>
