--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,7 +13,7 @@
         <div class="subscribed">
             <h1><a href="index.html">SUMATHI MASA PATHRIKA</a></h1>
             <p>Enter the subscription code of current month</p>
-            <form action="">
+            <form action="login.php">
                 <input class="input" id="focus" name="code" type="password" placeholder="Enter code...." required>
                 <button class="button">S U B M I T</button>
             </form>
@@ -22,12 +22,37 @@
         <div><a class="not" href="subscribe.html">not yet subscribed</a></div>
     </div>
 
-    <script>
-        const input = document.querySelector('.input');
-        const button = document.querySelector('.button');
-        const invalid = document.querySelector('.red');
-        const _0x4df354 = _0x162b; function _0x162b(_0x155c18, _0x77b8cd) { const _0x372a27 = _0x372a(); return _0x162b = function (_0x162bf3, _0x533e5f) { _0x162bf3 = _0x162bf3 - 0xb8; let _0x4cfcc1 = _0x372a27[_0x162bf3]; return _0x4cfcc1; }, _0x162b(_0x155c18, _0x77b8cd); } (function (_0x566454, _0x288280) { const _0x28af33 = _0x162b, _0x1251ba = _0x566454(); while (!![]) { try { const _0x341721 = parseInt(_0x28af33(0xc9)) / 0x1 * (-parseInt(_0x28af33(0xbc)) / 0x2) + -parseInt(_0x28af33(0xc5)) / 0x3 * (-parseInt(_0x28af33(0xba)) / 0x4) + -parseInt(_0x28af33(0xc0)) / 0x5 * (parseInt(_0x28af33(0xcc)) / 0x6) + parseInt(_0x28af33(0xc2)) / 0x7 * (parseInt(_0x28af33(0xc1)) / 0x8) + parseInt(_0x28af33(0xc7)) / 0x9 * (-parseInt(_0x28af33(0xc4)) / 0xa) + -parseInt(_0x28af33(0xcd)) / 0xb * (parseInt(_0x28af33(0xca)) / 0xc) + parseInt(_0x28af33(0xc8)) / 0xd * (parseInt(_0x28af33(0xbe)) / 0xe); if (_0x341721 === _0x288280) break; else _0x1251ba['push'](_0x1251ba['shift']()); } catch (_0x47f816) { _0x1251ba['push'](_0x1251ba['shift']()); } } }(_0x372a, 0xedefb), button[_0x4df354(0xb9)](_0x4df354(0xc6), function (_0x1eef7b) { const _0x2b4e40 = _0x4df354; _0x1eef7b['preventDefault'](); const _0x4770b1 = input[_0x2b4e40(0xcb)]; _0x4770b1 === _0x2b4e40(0xbd) ? location[_0x2b4e40(0xc3)](_0x2b4e40(0xbf)) : (invalid[_0x2b4e40(0xb8)][_0x2b4e40(0xbb)] = 'block', input[_0x2b4e40(0xcb)] = ''); })); function _0x372a() { const _0x35d969 = ['28MSuHMj', 'display', '10BNAvYu', 'SUMATHI@0624', '9396506YJYSXs', 'sumathi.html', '25DqeWiP', '215552bgVKPN', '343YrcfiD', 'replace', '30nxzbzQ', '230397BqLSLm', 'click', '1264374HBXtfc', '52PDMHCl', '169149ZzBjJz', '48TdLOLy', 'value', '527226dzWkIT', '5118905VXjXJZ', 'style', 'addEventListener']; _0x372a = function () { return _0x35d969; }; return _0x372a(); }
-    </script>
+</body>
+
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="login.css">
+    <title>Login</title>css
+</head>
+
+<body>
+    <div class="wrapper login-wrapper">
+        <div class="subscribed">
+            <h1><a href="index.html">SUMATHI MASA PATHRIKA</a></h1>
+            <p>Enter the subscription code of current month</p>
+            <form name="form" method="post" action="login.php">
+                <input class="input" id="focus" name="code" type="password" placeholder="Enter code...." required>
+                <button type="submit" class="button" name="login_user">S U B M I T</button>
+            </form>
+        </div>
+
+        
+        <div><a class="not" href="subscribe.html">not yet subscribed</a></div>
+    </div>
+
+    
 
 </body>
 
