--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
-    <title>Login</title>css
+    <title>Login</title>
 </head>
 
 <body>
