--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
         <div class="subscribed">
             <h1><a href="index.html">SUMATHI MASA PATHRIKA</a></h1>
             <p>Enter the subscription code of current month</p>
-            <form name="form" method="post" action="login.php">
+            <form name="form" method="POST" action="login.php">
                 <input class="input" id="focus" name="code" type="password" placeholder="Enter code...." required>
                 <button type="submit" class="button" name="login_user">S U B M I T</button>
             </form>
